# brave-ai

./: .gitignore  AGENTS.md  README.md  docker-compose.backend.yml  docker-compose.prod.yml  package-lock.json  package.json
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_create_cameras.py  0003_create_reporting_tables.py
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: router.py
backend/app/api/routes/: alerts.py  auth.py  bullying_logs.py  cameras.py  incident_events.py  recordings.py  websocket.py
backend/app/core/: config.py  security.py
backend/app/data/: mock_data.py
backend/app/db/: __init__.py  seed.py
backend/app/models/: __init__.py  camera.py  reporting.py  user.py
backend/app/repositories/: __init__.py  cameras.py  reporting.py  users.py
backend/app/services/: evidence_clips.py  realtime.py  recording_catalog.py  recording_segments.py
backend/tests/: test_evidence_clips.py  test_recording_segments.py
deploy/: Caddyfile  README_VPS.md  env.production.example
docs/: raspberry-pi-publisher-kit.md
frontend/: .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json
frontend/public/pi/: brave-pi-publisher.service  brave-pi-publisher.sh  install.sh
frontend/scripts/: dev-https-lan.ps1
frontend/src/app/: globals.css  layout.tsx
frontend/src/lib/: media-gateway.ts  (+1 more)
media/: mediamtx.yml
(+41 files in other folders)
